Fix Footer, Spacings

--- a/case-studies/ai-sports-scheduling/styles.css
+++ b/case-studies/ai-sports-scheduling/styles.css
@@ -2288,7 +2288,7 @@ NavigationContainer [data-framer-component-type="NavigationContainer"] > *,
 }
 .framer-6XL82 .framer-72rtr7 {
   background-color: #fff;
-  height: 12801px;
+  height: 13000px;
   overflow: hidden;
   position: relative;
   width: 1440px;
@@ -3114,7 +3114,7 @@ NavigationContainer [data-framer-component-type="NavigationContainer"] > *,
 .framer-6XL82 .framer-1eqafh9 {
   background-color: #fff;
   flex: none;
-  height: 7097px;
+  height: 7300px;
   left: 0;
   overflow: hidden;
   position: absolute;
